# qt-for-foc

./: .gitignore  README.md
.serena/: project.yml
.serena/memories/: user_preferences.md  workflow_rules.md
factory/openspec/changes/archive/2025-12-01-add-serial-motor-control/: proposal.md
factory/openspec/changes/archive/2025-12-03-add-algorithm-explanation-window/: proposal.md
factory/openspec/changes/archive/2025-12-03-add-algorithm-explanation-window/specs/foc-visualization/: spec.md
factory/openspec/changes/archive/2025-12-03-add-foc-visualization-tool/specs/foc-simulation/: spec.md
openspec/: AGENTS.md  changes  project.md  specs
openspec/axdr/: project.md
openspec/axdr/changes/archive/2025-12-01-add-serial-motor-control/specs/parameter-management/: spec.md
openspec/axdr/changes/archive/2025-12-02-add-modbus-slave-test-mode/: proposal.md
openspec/changes/add-foc-visualization-tool/: architecture.md  proposal.md  tasks.md
openspec/changes/add-foc-visualization-tool/specs/control-loops/: spec.md
openspec/changes/add-foc-visualization-tool/specs/foc-visualization/: spec.md
openspec/changes/archive/2025-12-01-add-serial-motor-control/: tasks.md
openspec/changes/archive/2025-12-01-add-serial-motor-control/specs/serial-communication/: spec.md
openspec/changes/archive/2025-12-02-add-modbus-slave-test-mode/: design.md  tasks.md
openspec/changes/archive/2025-12-02-add-modbus-slave-test-mode/specs/serial-communication/: spec.md
openspec/changes/archive/2025-12-03-add-algorithm-explanation-window/: tasks.md
openspec/changes/archive/2025-12-06-add-cascade-config-switching/: tasks.md
openspec/changes/archive/2025-12-06-add-cascade-config-switching/specs/foc-visualization/: spec.md
openspec/changes/archive/2025-12-06-reorganize-window-layout/: proposal.md  tasks.md
openspec/changes/archive/2025-12-06-reorganize-window-layout/specs/foc-visualization/: spec.md
openspec/foc/: project.md
openspec/foc/changes/archive/2025-12-06-add-cascade-config-switching/: proposal.md
openspec/specs/control-loops/: spec.md
openspec/specs/foc-simulation/: spec.md
openspec/specs/foc-visualization/: spec.md
openspec/specs/motor-control-ui/: spec.md
openspec/specs/parameter-management/: spec.md
openspec/specs/serial-communication/: spec.md
qt6_for_axdr/: CMakeLists.txt  Makefile  main.cpp  resources.qrc
qt6_for_axdr/docs/: protocol.md
qt6_for_axdr/src/log/: comm_logger.cpp  comm_logger.h
qt6_for_axdr/src/params/: motor_params.cpp  motor_params.h  param_manager.cpp  param_manager.h
qt6_for_axdr/src/serial/: modbus_client.cpp  modbus_client.h
qt6_for_axdr/src/slave/: modbus_slave.cpp  modbus_slave.h  slave_window.cpp  slave_window.h  test_data_config.cpp  test_data_config.h
qt6_for_axdr/src/ui/: main_window.cpp  main_window.h  motor_config_widget.cpp  motor_config_widget.h  pid_config_widget.cpp  pid_config_widget.h  serial_config_widget.cpp  serial_config_widget.h
qt6_for_visualization_foc/: CMakeLists.txt  Makefile  main.cpp
qt6_for_visualization_foc/config/: bldc_foc.json  bldc_six_step.json  cascade_current.json  cascade_current_velocity.json  cascade_full.json  default_pmsm.json  small_pmsm.json
qt6_for_visualization_foc/src/control/: i_loop_controller.h  loop_controller.cpp  loop_controller.h  sim_controller.cpp  sim_controller.h  six_step_controller.cpp  six_step_controller.h
qt6_for_visualization_foc/src/core/: bldc_model.cpp  bldc_model.h  config_loader.cpp  config_loader.h  data_buffer.cpp  data_buffer.h  i_motor_model.h  i_pid_controller.h  i_transform.h  motor_model_factory.cpp  motor_model_factory.h  pid_controller.cpp  pid_controller.h  pmsm_model.cpp  pmsm_model.h  sim_engine.cpp  sim_engine.h  svpwm.cpp  svpwm.h  transform.cpp  transform.h  types.h
qt6_for_visualization_foc/src/ui/: algorithm_explanation_window.cpp  algorithm_explanation_window.h  control_loop_window.cpp  control_loop_window.h  foc_visualization_window.cpp  foc_visualization_window.h  waveform_window.cpp  waveform_window.h
qt6_for_visualization_foc/src/ui/panels/: control_loop_explanation_panel.cpp  control_loop_explanation_panel.h  control_toolbar_panel.cpp  control_toolbar_panel.h  coord_transform_panel.cpp  coord_transform_panel.h  current_loop_panel.cpp  current_loop_panel.h  motor_model_explanation_panel.cpp  motor_model_explanation_panel.h  motor_params_panel.cpp  motor_params_panel.h  motor_state_panel.cpp  motor_state_panel.h  pid_config_panel.cpp  pid_config_panel.h  position_loop_panel.cpp  position_loop_panel.h  svpwm_explanation_panel.cpp  svpwm_explanation_panel.h  svpwm_panel.cpp  svpwm_panel.h  transform_explanation_panel.cpp  transform_explanation_panel.h  velocity_loop_panel.cpp  velocity_loop_panel.h
qt6_for_visualization_foc/src/ui/widgets/: arrow_item.cpp  arrow_item.h  block_item.cpp  block_item.h  cascade_widget.cpp  cascade_widget.h  circuit_widget.cpp  circuit_widget.h  coordinate_widget.cpp  coordinate_widget.h  hall_indicator.cpp  hall_indicator.h  hexagon_widget.cpp  hexagon_widget.h  label_item.cpp  label_item.h  resizable_group.cpp  resizable_group.h  rotor_animator.cpp  rotor_animator.h  step_indicator.cpp  step_indicator.h  sumpoint_item.cpp  sumpoint_item.h  vector_scope.cpp  vector_scope.h  waveform_view.cpp  waveform_view.h
